<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobitrack</string>
    <string name="app_logo">Mobitrack</string>

    <string name="settings_id_title">Mobile Number</string>
    <string name="settings_address_title">Server address</string>
    <string name="settings_address_summary">Domain name or IP address</string>
    <string name="settings_port_title">Server port</string>
    <string name="settings_port_summary">Tracking server TCP port</string>
    <string name="settings_interval_title">Interval (sec)</string>
    <string name="settings_interval_summary">Messages interval in seconds</string>
    <string name="settings_status_title">Application status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_provider_title">Location provider</string>
    <string name="settings_provider_summary">Source of location data</string>
    <string-array name="settings_provider_names">
        <item>GPS provider</item>
        <item>Network provider</item>
        <item>Mixed provider</item>
    </string-array>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="settings_foreground_title">Foreground service</string>
    <string name="settings_foreground_summary">Increase service priority</string>

    <string name="menu_status">Status</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    
    <string name="about_description">Techno Mobitrack GPS tracker is the easiest ever tracking application. Tracking of marketing staffs, children, spouse, expedition trekkers etc from strong tracking platform
Just install and register to our tracking (server) http://202.52.240.149:8082 .Use your mobile number as device ID. Data transfer using wifi or GPRS as per your need.</string>
    <string name="about_license">©Technology sales Pvt Ltd (www.technosales.com.np) all right reserved</string>
    <string name="about_web">www.technosales.com.np</string>

    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_fail">Sending failed</string>
    <string name="status_location_update">Data logged</string>
    <string name="status_connectivity_change">Connection established</string>

    <string name="hidden_app_name">Device Settings</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (MOBITRACK).</string>
    <string name="scheduling_label">Scheduling</string>
    <string name="add_schedule_label">Add Schedule</string>
    <string name="save_label">Save</string>
    <string name="msg_failed_save_schedule">Sorry, we were unable to save schedule, please try again.</string>
    <string name="msg_success_save_schedule">Schedule successfully saved</string>
    <string name="gps_provider">gps</string>
    <string name="ip_address">202.52.240.146</string>
    <string name="port">5055</string>
    <string name="open_location_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="gps_not_enabled">Sorry, GPS is not enabled. Please enable GPS and try again.</string>
    <string name="device_idle">Idle for 30 seconds, stopping location tracking</string>
    <string name="device_active">Active, starting location tracking</string>

</resources>
